implement tf-idf to the messages

--- a/NLP/Detect_Spam.ipynb
+++ b/NLP/Detect_Spam.ipynb
@@ -797,17 +797,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def transformText(mess):\n",
-    "    removepunc = [ c for c in mess if c not in string.punctuation ]\n",
-    "    removepunc = \"\".join([ c for c in mess if c not in string.punctuation ])\n",
-    "    removepunc = removepunc.split()\n",
-    "    removepunc = [ c for c in removepunc if c not in stopwords.words(\"English\") ]\n",
-    "    removepunc = \" \".join(removepunc)\n",
-    "    return removepunc\n",
+    "    \"\"\"\n",
+    "    Takes in a string of text, then performs the following:\n",
+    "    1. Remove all punctuation\n",
+    "    2. Remove all stopwords\n",
+    "    3. Returns a list of the cleaned text\n",
+    "    \"\"\"\n",
+    "    # Check characters to see if they are in punctuation\n",
+    "    nopunc = [char for char in mess if char not in string.punctuation]\n",
+    "\n",
+    "    # Join the characters again to form the string.\n",
+    "    nopunc = ''.join(nopunc)\n",
+    "    \n",
+    "    # Now just remove any stopwords\n",
+    "    return [word for word in nopunc.split() if word.lower() not in stopwords.words('english')]\n",
     "    \n",
     "   "
    ]
@@ -850,6 +858,236 @@
    ],
    "source": [
     "messages[\"Message\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [Go, jurong, point, crazy, Available, bugis, n...\n",
+       "1                       [Ok, lar, Joking, wif, u, oni]\n",
+       "2    [Free, entry, 2, wkly, comp, win, FA, Cup, fin...\n",
+       "3        [U, dun, say, early, hor, U, c, already, say]\n",
+       "4    [Nah, dont, think, goes, usf, lives, around, t...\n",
+       "Name: Message, dtype: object"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "messages[\"Message\"].head(5).apply(transformText)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bow_transformer = CountVectorizer(analyzer=transformText).fit(messages[\"Message\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11425\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(bow_transformer.vocabulary_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U dun say so early hor... U c already then say...\n"
+     ]
+    }
+   ],
+   "source": [
+    "message4 = messages['Message'][3]\n",
+    "print(message4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 4068)\t2\n",
+      "  (0, 4629)\t1\n",
+      "  (0, 5261)\t1\n",
+      "  (0, 6204)\t1\n",
+      "  (0, 6222)\t1\n",
+      "  (0, 7186)\t1\n",
+      "  (0, 9554)\t2\n"
+     ]
+    }
+   ],
+   "source": [
+    "bow4  = bow_transformer.transform([message4])\n",
+    "print(bow4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bow_transformer.get_feature_names_out()[4068])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bow4 = bow_transformer.transform([message4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 4068)\t2\n",
+      "  (0, 4629)\t1\n",
+      "  (0, 5261)\t1\n",
+      "  (0, 6204)\t1\n",
+      "  (0, 6222)\t1\n",
+      "  (0, 7186)\t1\n",
+      "  (0, 9554)\t2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bow4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 11425)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bow4.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bow5 = bow_transformer.transform(messages[\"Message\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf_transformer = TfidfTransformer().fit(bow5)\n",
+    "tfdif5 = tfidf_transformer.transform(bow5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.2800524267409408\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tfidf_transformer.idf_[bow_transformer.vocabulary_[\"u\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.863514852771781\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tfidf_transformer.idf_[bow_transformer.vocabulary_[\"ok\"]])"
    ]
   },
   {
