Housing price prediction project based on data from Kaggle https://www.kaggle.com/datasets/harlfoxem/housesalesprediction

--- a/DeepLearning/Predict Housing Price Project.ipynb
+++ b/DeepLearning/Predict Housing Price Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "6e61bdf7-674a-47b8-a84f-af707a29d2ce",
    "metadata": {},
    "outputs": [],
@@ -16,24 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "5b1dc786-c7c9-4285-991a-3c7c555379c8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/saras/Downloads/TensorFlow_FILES (1)/TensorFlow_FILES/DATA/Predict Housing Price Project.ipynb\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv(\"C:/Users/saras/Downloads/TensorFlow_FILES (1)/TensorFlow_FILES/DATA/Predict Housing Price Project.ipynb\")"
+    "df = pd.read_csv(\"kc_house_data.csv\")"
    ]
   },
   {
